--- a/demo/index.html
+++ b/demo/index.html
@@ -83,6 +83,7 @@ button:hover {
   transition: all 150ms ease;
 }
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div class="App">
