Change webpack in anticipation of another demo
Because the next commit files will be renamed, in this commit we can see
what *actually* changed, rather than just a huge "file deleted" and
another "file added".

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>demo | react-stripe-elements</title>
     <script src="https://js.stripe.com/v3/"></script>
     <style>
 * {
@@ -95,5 +96,6 @@ button:hover {
   <body>
     <div class="App">
     </div>
+    <script src="/demo.js"></script>
   </body>
 </html>
