--- a/demo/index.html
+++ b/demo/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Polyfill `Map`, `Set` and `requestAnimationFrame` for React 16 -->
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script src="https://js.stripe.com/v3/"></script>
     <style>
 * {
