Add IBAN and iDEAL Bank Elements to demo

--- a/demo/demo/index.html
+++ b/demo/demo/index.html
@@ -74,22 +74,33 @@
       box-shadow: 0 7px 14px rgba(50, 50, 93, .10), 0 3px 6px rgba(0, 0, 0, .08);
     }
 
+    input,
     .StripeElement {
       display: block;
       margin: 10px 0 20px 0;
       max-width: 500px;
       padding: 10px 14px;
+      font-size: 1em;
+      font-family: 'Source Code Pro', monospace;
       box-shadow: rgba(50, 50, 93, 0.14902) 0px 1px 3px, rgba(0, 0, 0, 0.0196078) 0px 1px 0px;
+      border: 0;
+      outline: 0;
       border-radius: 4px;
       background: white;
     }
 
+    input::placeholder {
+      color: #aab7c4;
+    }
+
+    input:focus,
     .StripeElement--focus {
       box-shadow: rgba(50, 50, 93, 0.109804) 0px 4px 6px, rgba(0, 0, 0, 0.0784314) 0px 1px 3px;
       -webkit-transition: all 150ms ease;
       transition: all 150ms ease;
     }
 
+    .StripeElement.IdealBankElement,
     .StripeElement.PaymentRequestButton {
       padding: 0;
     }
